@@ -23,70 +23,93 @@ from bzrlib.branch import Branch
 
 from errors import (NotBranchError)
 
-def nick(branch, nickname=None):
-    """ Get or set nickname.
+def diff(revision=None, file_list=None, diff_options=None, prefix=None):
+    """ Save the diff into a temporary file.
     
-    :param branch: path to the branch
+    :param revision: a list of revisions (one or two elements)
     
-    :param nickname: if specified, the nickname will be set
+    :param file_list: list of files you want to diff
     
-    :return: nickname
+    :param diff_options: external diff options
+    
+    :param prefix: 0 - p0, 1 - p1, or specify prefixes in the form of old/:new/
+    
+    :return: path to the temporary file which contains the diff output
     """
-    try:
-        branch = Branch.open_containing(branch)[0]
-    except errors.NotBranchError:
-        raise NotBranchError
+    from tempfile import mkstemp
     
-    if nickname is not None:
-        branch.nick = nickname
-
-    return branch.nick    
-
-def revno(branch):
-    """ Get current revision number for specified branch
-    
-    :param branch: path to the branch
-    
-    :return: revision number
-    """
-    try:
-        revno = Branch.open_containing(branch)[0].revno()
-    except errors.NotBranchError:
-        raise NotBranchError
-    else:
-        return revno
-
-def version():
-    """ Get version information from bzr
-    
-    :return: bzrlib version
-    """
-    return bzrlib.__version__
-
-def whoami(branch=None, email=False):
-    """ Get user's data (name and email address)
-    
-    :param branch: if specified, the user's data will be looked up in the branch's config
-    
-    :param email: if True, only the email address will be returned
-    
-    :return: user info (only email address if email is True)
-    """
+    from bzrlib.builtins import internal_tree_files
+    from bzrlib.diff import show_diff_trees
     from bzrlib.workingtree import WorkingTree
     
-    if branch is not None:
-        try:
-            b = WorkingTree.open_containing(u'.')[0].branch
-            config = bzrlib.config.BranchConfig(b)
-        except NotBranchError:
-            config = bzrlib.config.GlobalConfig()
+    from info_helper import diff_helper
+
+    if (prefix is None) or (prefix == '0'):
+        # diff -p0 format
+        old_label = ''
+        new_label = ''
+    elif prefix == '1':
+        old_label = 'old/'
+        new_label = 'new/'
     else:
-        config = bzrlib.config.GlobalConfig()
-        
-    if email:
-        return config.user_email()
+        if not ':' in prefix:
+            raise errors.BzrError("--diff-prefix expects two values separated by a colon")
+        old_label, new_label = prefix.split(":")
+    
+    try:
+        tree1, file_list = internal_tree_files(file_list)
+        tree2 = None
+        b = None
+        b2 = None
+    except errors.FileInWrongBranch:
+        if len(file_list) != 2:
+            raise errors.BzrCommandError("Files are in different branches")
+
+        tree1, file1 = WorkingTree.open_containing(file_list[0])
+        tree2, file2 = WorkingTree.open_containing(file_list[1])
+    
+        if file1 != "" or file2 != "":
+            # FIXME diff those two files. rbc 20051123
+            raise errors.BzrCommandError("Files are in different branches")
+    
+        file_list = None
+    
+    tmpfile = mkstemp(prefix='olive_')
+    tmpfp = open(tmpfile[1], 'w')
+    
+    if revision is not None:
+        if tree2 is not None:
+            raise errors.BzrCommandError("Can't specify -r with two branches")
+    
+        if (len(revision) == 1) or (revision[1].spec is None):
+            ret = diff_helper(tree1, file_list, diff_options,
+                                   revision[0], 
+                                   old_label=old_label, new_label=new_label,
+                                   output=tmpfp)
+        elif len(revision) == 2:
+            ret = diff_helper(tree1, file_list, diff_options,
+                                   revision[0], revision[1],
+                                   old_label=old_label, new_label=new_label,
+                                   output=tmpfp)
+        else:
+            raise errors.BzrCommandError('bzr diff --revision takes exactly one or two revision identifiers')
     else:
-        return config.username()
+        if tree2 is not None:
+            ret = show_diff_trees(tree1, tree2, tmpfp, 
+                                   specific_files=file_list,
+                                   external_diff_options=diff_options,
+                                   old_label=old_label, new_label=new_label)
+        else:
+            ret = diff_helper(tree1, file_list, diff_options,
+                                   old_label=old_label, new_label=new_label,
+                                   output=tmpfp)
+    
+    tmpfp.close()
+    
+    if ret == 0:
+        return False
+    else:
+        return tmpfile[1]
 
 def info(location):
     """ Get info about branch, working tree, and repository
@@ -192,3 +215,68 @@ def info(location):
         return
     except errors.NoRepositoryPresent:
         pass
+
+def nick(branch, nickname=None):
+    """ Get or set nickname.
+    
+    :param branch: path to the branch
+    
+    :param nickname: if specified, the nickname will be set
+    
+    :return: nickname
+    """
+    try:
+        branch = Branch.open_containing(branch)[0]
+    except errors.NotBranchError:
+        raise NotBranchError
+    
+    if nickname is not None:
+        branch.nick = nickname
+
+    return branch.nick    
+
+def revno(branch):
+    """ Get current revision number for specified branch
+    
+    :param branch: path to the branch
+    
+    :return: revision number
+    """
+    try:
+        revno = Branch.open_containing(branch)[0].revno()
+    except errors.NotBranchError:
+        raise NotBranchError
+    else:
+        return revno
+
+def version():
+    """ Get version information from bzr
+    
+    :return: bzrlib version
+    """
+    return bzrlib.__version__
+
+def whoami(branch=None, email=False):
+    """ Get user's data (name and email address)
+    
+    :param branch: if specified, the user's data will be looked up in the branch's config
+    
+    :param email: if True, only the email address will be returned
+    
+    :return: user info (only email address if email is True)
+    """
+    from bzrlib.workingtree import WorkingTree
+    
+    if branch is not None:
+        try:
+            b = WorkingTree.open_containing(u'.')[0].branch
+            config = bzrlib.config.BranchConfig(b)
+        except NotBranchError:
+            config = bzrlib.config.GlobalConfig()
+    else:
+        config = bzrlib.config.GlobalConfig()
+        
+    if email:
+        return config.user_email()
+    else:
+        return config.username()
